--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,21 @@
 
     <string name="action_settings">Settings</string>
     <string name="freqHz">Частота, Гц</string>
-    <string name="freqCpm">Частота, Об/мин</string>
+    <string name="freqCpm">Частота, об/мин</string>
+
+    <string name="aDb">AdB re 1 micro g</string>
+    <string name="vDbMmSec">VdB re 1x10e-6 мм/сек</string>
+    <string name="vDbMSec">VdB re 1x10e-8 м/с</string>
+
+    <string name="AccelerationG">Виброускорение, g</string>
+    <string name="AccelerationMSec2">Виброускорение, м/с2</string>
+    <string name="AccelerationMmSec2">Виброускорение, мм/с2</string>
+
+    <string name="velocityMSec">Виброскорость, м/с</string>
+    <string name="velocityMmSec">Виброскорость, мм/с</string>
+
+    <string name="displacementM">Виброперемещение, м</string>
+    <string name="displacementMm">Виброперемещение, мм</string>
 
     <string-array name="edIzmList">
         <item>СКЗ</item>
