--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,6 @@
     <string name="temperatureC_ru">Температура, C</string>
     <string name="temperatureF_ru">Температура, F</string>
 
+    <string name="presigion">%.12f</string>
+
 </resources>
